--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -28,11 +28,27 @@ fishA11 = read_csv('Fish.csv')
 # Predicting Fish Weight
 
 
-## Perch
+## Perch==
+
+```{r}
+perchFish = filter(fishA11, Species=='Perch') 
+perchModel = lm(Weight~Length1+Length2+Length3+Height+Width, data= perchFish)
+```
+
+
+```{r}
+summary.lm(perchModel)
+```
+
+
 
 ### Best Models
+We find the best models for all three species
 
 ### Best Two regressor model
+
+
+
 
 
 ## Pike
