--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -33,6 +33,7 @@ fishA11 = read_csv('Fish.csv')
 ```{r}
 perchFish = filter(fishA11, Species=='Perch') 
 perchModel = lm(Weight~Length1+Length2+Length3+Height+Width, data= perchFish)
+summary.lm(perchModel)
 ```
 
 
