--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -34,7 +34,6 @@ fishA11 = read_csv('Fish.csv')
 perchFish = filter(fishA11, Species=='Perch') 
 perchModel = lm(Weight~Length1+Length2+Length3+Height+Width, data= perchFish)
 summary.lm(perchModel)
-
 ```
 
 
@@ -74,11 +73,28 @@ We find the best models for all three species
 
 ### Best Two regressor model
 
-
-
-
-
 ## Pike
+
+```{r}
+pikeFish = filter(fishA11, Species=='Pike') 
+pikeModel = lm(Weight~Length1+Length2+Length3+Height+Width, data= pikeFish)
+summary.lm(pikeModel)
+```
+
+```{r}
+library(leaps)
+regsubsets.out <-
+    regsubsets(Weight ~ Length1 + Length2 + Length3 + Height + Width,
+               data = pikeFish,
+               nbest = 2,       # 1 best model for each number of predictors
+               nvmax = NULL,    # NULL for no limit on number of variables
+               force.in = NULL, force.out = NULL,
+               method = "exhaustive")
+
+summary.out <- summary(regsubsets.out)
+as.data.frame(summary.out$outmat)
+library(car)
+subsets(regsubsets.out,statistic="adjr2",legend="bottomright",main="Adjusted R^2")
 
 ### Best Models
 
