--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -82,9 +82,9 @@ summary.lm(pikeModel)
 ```
 
 ```{r}
-library(leaps)
 regsubsets.out <-
-    regsubsets(Weight ~ Length1 + Length2 + Length3 + Height + Width,
+    regsubsets(Weight ~ Length1 + Length2 + Length3 +
+               Height + Width,
                data = pikeFish,
                nbest = 2,       # 1 best model for each number of predictors
                nvmax = NULL,    # NULL for no limit on number of variables
@@ -95,6 +95,7 @@ summary.out <- summary(regsubsets.out)
 as.data.frame(summary.out$outmat)
 library(car)
 subsets(regsubsets.out,statistic="adjr2",legend="bottomright",main="Adjusted R^2")
+```
 
 ### Best Models
 
