--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -55,10 +55,22 @@ subsets(regsubsets.out,statistic="adjr2",legend="bottomright",main="Adjusted R^2
 
 ```
 
+## Which is best??  
+
+```{r}
+which.max(summary.out$adjr2)
+```
+
+### Best Models
+We find the best models for all three species
+
 
 ```{r}
 summary.out$which[3,]
 ```
+
+
+### Best Two regressor model
 
 ```{r}
 #best model
@@ -67,11 +79,6 @@ data=perchFish)
 summary.lm(perchBest2)
 ```
 
-
-### Best Models
-We find the best models for all three species
-
-### Best Two regressor model
 
 ## Pike
 
