--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -121,12 +121,32 @@ RoachModel = lm(Weight~Length1+Length2+Length3+Height+Width, data= RoachFish)
 summary.lm(RoachModel)
 ```
 
-
-
-
-
 ### Best Models
+```{r}
+regsubsets.out <-
+    regsubsets(Weight ~ Length1 + Length2 + Length3 +
+               Height + Width,
+               data = RoachFish,
+               nbest = 2,       # 1 best model for each number of predictors
+               nvmax = NULL,    # NULL for no limit on number of variables
+               force.in = NULL, force.out = NULL,
+               method = "exhaustive")
+
+summary.out <- summary(regsubsets.out)
+as.data.frame(summary.out$outmat)
+library(car)
+subsets(regsubsets.out,statistic="adjr2",legend="bottomright",main="Adjusted R^2")
+```
 
 ### Best Two regressor model
+The best two variables to predict weight are L3 and width.
+```{r}
+#best model
+
+RoachBest2=lm(Weight~Height+Width,
+data=RoachFish)
+summary.lm(RoachBest2)
+```
+
 
 ## Final Summary Statements
